--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>TITULO NUEVO MODIFICADO!</h1>
 
     <form action="#" method="get">
+        <input type="text" name="nombre" id="nombre">
         <input type="button" value="enviar">
     </form>
 </body>
