--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <form action="#" method="get">
         <input type="text" name="nombre" id="nombre">
+        <input type="text" name="apellido" id="apellido">
         <input type="button" value="enviar">
     </form>
 </body>
