--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>TITULO NUEVO MODIFICADO!</h1>
 
     <form action="#" method="get">
-        <input type="textoo" name="nombre" id="nombre">
+        <input type="text" name="nombre" id="nombre">
         <input type="text" name="apellido" id="apellido">
         <input type="number" name="edad" id="edad">
         <input type="button" value="enviar">
